@@ -20,11 +20,12 @@
 
 import copy
 import logging
+import time
 import datetime
 from math import ceil
-import time
 
-from sqlalchemy import Column, Integer, ForeignKey, Interval
+from sqlalchemy import (Column, Integer, ForeignKey, Interval, Boolean,
+                        DateTime, String, PickleType)
 from sqlalchemy.orm import validates, relationship, synonym, reconstructor
 
 from stalker import defaults, log
@@ -68,7 +69,21 @@ class Studio(Entity, DateRangeMixin, WorkingHoursMixin):
 
     **Vacations**
 
-    You can define
+    Studio wide vacations are managed by the Studio class.
+
+    **Scheduling**
+
+    .. versionadded: 0.2.5
+       Schedule Info Attributes
+
+    There are a couple of attributes those become pretty interesting when used
+    together with the Studio instance while using the scheduling part of the
+    Studio. Please refer to the attribute documentation for each attribute:
+
+      :attr:`.is_scheduling`
+      :attr:`.last_scheduled_at`
+      :attr:`.last_scheduled_by`
+      :attr:`.last_schedule_message`
 
     :param int daily_working_hours: An integer specifying the daily working
       hours for the studio. It is another critical value attribute which
@@ -104,6 +119,44 @@ class Studio(Entity, DateRangeMixin, WorkingHoursMixin):
 
     _timing_resolution = Column("timing_resolution", Interval)
 
+    is_scheduling = Column(Boolean, default=False)
+    is_scheduling_by_id = Column(
+        Integer,
+        ForeignKey('Users.id'),
+        doc='The id of the user who is scheduling the Studio projects right '
+            'now'
+    )
+    is_scheduling_by = relationship(
+        'User',
+        primaryjoin='Studios.c.last_scheduled_by_id==Users.c.id',
+        doc='The User who has last scheduled the Studio projects'
+    )
+    scheduling_started_at = Column(
+        DateTime,
+        doc='Stores when the current scheduling is started at, it is a good '
+            'measure for measuring if the last schedule is not correctly '
+            'finished'
+    )
+    last_scheduled_at = Column(
+        DateTime,
+        doc='Stores the last schedule date'
+    )
+    last_scheduled_by_id = Column(
+        Integer,
+        ForeignKey('Users.id'),
+        doc='The id of the user who has last scheduled the Studio projects'
+    )
+    last_scheduled_by = relationship(
+        'User',
+        primaryjoin='Studios.c.last_scheduled_by_id==Users.c.id',
+        doc='The User who has last scheduled the Studio projects'
+    )
+    last_schedule_message = Column(
+        PickleType,
+        doc='Holds the last schedule message, generally coming generated by '
+        'TaskJuggler'
+    )
+
     def __init__(self,
                  daily_working_hours=None,
                  now=None,
@@ -123,7 +176,7 @@ class Studio(Entity, DateRangeMixin, WorkingHoursMixin):
 
     @property
     def daily_working_hours(self):
-        """a shourtcut for Studio.working_hours.daily_working_hours
+        """a shortcut for Studio.working_hours.daily_working_hours
         """
         return self.working_hours.daily_working_hours
 
@@ -317,10 +370,12 @@ class Studio(Entity, DateRangeMixin, WorkingHoursMixin):
         """
         return Vacation.query.filter(Vacation.user==None).all()
 
-    def schedule(self):
+    def schedule(self, scheduled_by=None):
         """Schedules all the active projects in the studio. Needs a Scheduler,
         so before calling it set a scheduler by using the :attr:`.scheduler`
         attribute.
+
+        :param scheduled_by: A User instance who is doing the scheduling.
         """
         # check the scheduler first
         if self.scheduler is None or \
@@ -334,10 +389,51 @@ class Studio(Entity, DateRangeMixin, WorkingHoursMixin):
                 }
             )
 
+        # check if the studio is already scheduling
+        if self.is_scheduling:
+            raise RuntimeError(
+                'The Studio is being scheduling right now by %(user)s, please '
+                'wait until the current scheduling is done!' % {
+                    'user': self.is_scheduling_by.name
+                }
+            )
+        else:
+            # set to self.is_scheduling
+            self.is_scheduling = True
+            self.is_scheudling_by = scheduled_by
+
+        self.scheduling_started_at = datetime.datetime.now()
+
         # run the scheduler
         self.scheduler.studio = self
         start = time.time()
-        result = self.scheduler.schedule()
+
+        # commit before scheduling
+        from stalker import db
+        db.session.commit()
+
+        result = None
+        try:
+            result = self.scheduler.schedule()
+        finally:
+            # in any case set is_scheduling to False
+            self.is_scheduling = False
+            self.is_scheduling_by = None
+
+            # also store the result
+            # if result:
+            self.last_schedule_message = result
+
+            # And the date the schedule is completed
+            # TODO: convert to UTC time
+            self.last_scheduled_at = datetime.datetime.now()
+
+            # and who has done the scheduling
+            if scheduled_by:
+                self.last_scheduled_by = scheduled_by
+
+            db.session.commit()
+
         end = time.time()
         logger.debug('scheduling took %s seconds' % (end - start))
         return result
